--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "bugs": {
     "url": "https://github.com/rafkhan/cherry-blossom/issues"
   },
-  "homepage": "https://github.com/rafkhan/cherry-blossom"
+  "homepage": "https://github.com/rafkhan/cherry-blossom",
+  "dependencies": {
+    "gulp": "^3.8.8",
+    "gulp-less": "^1.3.5"
+  }
 }
